added profile information

--- a/profile.html
+++ b/profile.html
@@ -39,32 +39,43 @@
     </header> 
 
     <main class="mainProfile">
-        <p>PROFILE PAGE</p>
+        <!-- <p>PROFILE PAGE</p> -->
         <div class="mainProfile__paragraph">
-            <!-- <h1 class="mainHome__paragraph__seventeen">SEVENTEEN</h1> -->
-            <!-- <H1>SAY THE NAME</H1> -->
-            
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p>
+            <h4>Name</h4> 
+            <p>Seventeen</p>
+        </div>
+        <div class="mainProfile__paragraph">
+            <h4>Debut</h4> 
+            <p>26th May, 2015</p>
+        </div>
+        <div class="mainProfile__paragraph">
+            <h4>Members</h4> 
+            <p>huge idol group, with 13 members and 3 sub-units forming one team. </p>
+        </div>
+        <div class="mainProfile__paragraph">
+            <h4>Sub-units</h4> 
+            <p>Hip-hop Unit, Vocal Unit, & Performance Unit</p>
+        </div>
+        <div class="mainProfile__paragraph">
+            <h4>Hip-hop Unit</h4> 
+            <p>S.coups, Wonwoo, Mingyu, Vernon</p>
+        </div>
+        <div class="mainProfile__paragraph">
+            <h4>Vocal Unit</h4> 
+            <p>WOOZI, Jeonghan, Joshua, DK, SeungKwan</p>
+        </div>
+        <div class="mainProfile__paragraph">
+            <h4>Performance Unit</h4> 
+            <p>Hoshi, Jun, THE 8, Dino</p>
+        </div>
+
+        <div class="mainProfile__paragraph">
+            <h4>Contents</h4> 
+            <p>Going Seventeen</p>
+        </div>
+        <div class="mainProfile__paragraph">
+            <h4>More Contents</h4> 
+            <p>IF, Snapshoot, Dawn is hotter than day</p>
         </div>
     </main>
 
