added link class to links

--- a/discography.html
+++ b/discography.html
@@ -26,10 +26,10 @@
             <div class="navbar">
                 <div class="navbar__item">
                     <ul class="navbar__ul">
-                        <li><a href="main.html">Home</a></li>
-                        <li><a href="profile.html">Profile</a></li>
-                        <li><a href="discography.html">Discography</a></li>
-                        <li><a href="members.html">Members</a></li>
+                        <li><a class="link" href="main.html">Home</a></li>
+                        <li><a class="link" href="profile.html">Profile</a></li>
+                        <li><a class="link" href="discography.html">Discography</a></li>
+                        <li><a class="link" href="members.html">Members</a></li>
                     </ul>
                 </div>
                 
@@ -38,20 +38,28 @@
     </header> 
 
     <main class="mainDiscography">
-        <p>DISCOGRAPHY PAGE</p>
+        <!-- <p>DISCOGRAPHY PAGE</p> -->
+        <img class="image" src="images/discography/17CARAT.jpg" alt="17_Carat" width="200px" height="200px">
+        <h1>Tracks</h1>
+        <p>1.Shining Diamond</p>
+        <p>2. Ah Yeah</p>
+        <p>3. 20</p>
+        <p>4. Adore U</p>
+        <p>5. Jam Jam</p>
     </main> 
 
     <footer>
         <div class="pledis">
             <p>pledis entertainment</p>
         </div>
+        <div class="bar"></div>
         <div class="icons">
-            <a href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
-            <a href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fab fa-spotify"></i></i></a>
-            <a href="https://www.facebook.com/seventeennews"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://twitter.com/pledis_17"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.youtube.com/user/pledis17"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://www.instagram.com/saythename_17"><i class="fa-brands fa-instagram"></i></a>
+            <a class="icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
+            <a class="icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fab fa-spotify"></i></i></a>
+            <a class="icons__links link" href="https://twitter.com/pledis_17"><i class="fa-brands fa-twitter"></i></a>
+            <a class="icons__links link" href="https://www.facebook.com/seventeennews"><i class="fa-brands fa-facebook-f"></i></a>
+            <a class="icons__links link" href="https://www.youtube.com/user/pledis17"><i class="fa-brands fa-youtube"></i></a>
+            <a class="icons__links link" href="https://www.instagram.com/saythename_17"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
 
