--- a/main.html
+++ b/main.html
@@ -13,8 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Mate SC&display=swap" rel="stylesheet">    
 <title>SEVENTEEN </title>
 </head>
-<body>
+<!-- <body >  -->
+<body onload="homePageNews()"> 
     <!-- background-color: #f7cac9; color: #92a8d1; -->
+
+    <!-- HEADER -->
     <header>
         <div id="cursor"></div>
         <div id="group"><span class="glitch"><a href="main.html">SVT</a></span></div>
@@ -38,23 +41,34 @@
             </div>
         </nav> 
     </header> 
+    <!-- END OF HEADER -->
 
-    <main class="mainHome">
-        
-        <!-- <img class="mainHome__img" src="images/svt_attacca_dark.jpg" alt=""  > -->
+    <!-- MAINHOME -->
+    <main class="mainHome"> <!--  class=" observable" contenteditable="false" -->
         <div class="mainHome__paragraph">
-            <!-- <h1 class="mainHome__paragraph__seventeen">SEVENTEEN</h1> -->
-            <!-- <H1>SAY THE NAME</H1> -->
-            <!-- <h1>Attacca EP</h1>
-            <p>Out Now</p>   -->
-           
-            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam, corrupti voluptates magni iure ducimus possimus recusandae vero dicta nihil quaerat cum asperiores, nemo eligendi facilis explicabo? Architecto, est? Cupiditate.</p> -->
-            <!-- <div class="imageDiv"> -->
-                <!-- <img class="image" src="images/seventeen_logo.png" alt=""> -->
-            <!-- </div> -->
+            <!-- Initialize homeData values -->
+            <h1 class="mainHome__paragraph__topic">Say The Name</h1>
+            <h1 class="mainHome__paragraph__title" onload="mainAnimation()">This Is Seventeen</h1>
+            <a class="mainHome__paragraph__subtitle" href="profile.html">View Profile</a>  
+            <p class="mainHome__paragraph__description">SEVENTEEN is a huge idol group, with 13 members and 3 sub-units forming one team. The 3 different sub-units (Hip-hop Team, Vocal Team and Performance Team) also actively participate in album production.</p>
+            <div class="mainHome__paragraph__images">
+                <div class="mainHome__paragraph__images__image1Div">
+                    <img class="mainHome__paragraph__images__image1Div__image1" src="images/home_page/attacca/attacca_group_photo_2.jpeg" alt="">
+                </div>
+                <div class="mainHome__paragraph__images__image2Div">
+                    <img class="mainHome__paragraph__images__image2Div__image2" src="images/home_page/attacca/attacca_group_photo_1.jpeg" alt="">
+                </div>
+            </div>
+            <div class="mainHome__paragraph__imagesOutside">
+                <img class="mainHome__paragraph__imagesOutside__image3" src="images/home_page/attacca/attacca_group_photo_1.jpeg" alt="">
+                <img class="mainHome__paragraph__imagesOutside__image4" src="images/home_page/attacca/attacca_group_photo_2.jpeg" alt="">
+                <img class="mainHome__paragraph__imagesOutside__image5" src="images/home_page/attacca/attacca_group_photo_2.jpeg" alt="">
+            </div>
         </div>
     </main>
+    <!-- END OF MAINHOME -->
 
+    <!-- FOOTER -->
     <footer>
         <div class="pledis">
             <p>pledis entertainment</p>
@@ -62,19 +76,26 @@
         <div class="bar"></div>
         <div class="icons">
             <a class="icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
-            <a class="icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fab fa-spotify"></i></i></a>
+            <a class="icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank"><i class="fab fa-spotify"></i></i></a>
             <a class="icons__links link" href="https://twitter.com/pledis_17"><i class="fa-brands fa-twitter"></i></a>
             <a class="icons__links link" href="https://www.facebook.com/seventeennews"><i class="fa-brands fa-facebook-f"></i></a>
             <a class="icons__links link" href="https://www.youtube.com/user/pledis17"><i class="fa-brands fa-youtube"></i></a>
             <a class="icons__links link" href="https://www.instagram.com/saythename_17"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
+    <!-- END OF FOOTER -->
 
-    <div class="backgroundText">Say the Name!</div>
-    <!-- <div class="backgroundText">17 Right Here! </div> -->
+    <!-- BACKGROUND TEXT -->
+    <div class="backgroundText">17 Right Here! </div>
    
-
-    <script type="module" src="/main.js"></script>
+    <!-- JAVASCRIPT RELATED -->
     <script src="https://kit.fontawesome.com/58fb59c662.js" crossorigin="anonymous"></script>
+
+    <!-- MAIN JAVASCRIPT FILES -->
+    <script type="module" src="/app.js"></script>
+    <script src="/javascript/data/home_data.js"></script>
+    <script src="/javascript/pages/main.js"></script>
+    <!-- END OF JAVASCRIPT RELATED -->
 </body>
 </html>
+
