--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Asap&display=swap" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css2?family=Mate SC&display=swap" rel="stylesheet">    
-    <title>SEVENTEEN - BIO</title>
+    <title>SEVENTEEN - PROFILE</title>
 </head>
 <body>
     <header>
@@ -41,20 +41,17 @@
     <main class="mainProfile">
         <!-- <p>PROFILE PAGE</p> -->
         <div class="mainProfile__paragraph__name">
-            <!-- <h4>Name</h4> 
-            <p>Seventeen</p> -->
+            <!-- <p>Seventeen</p> -->
         </div>
-        <div>
+        <div class="mainProfile__seventeen__name">
             <h1>Seventeen</h1>
         </div>
         <div class="mainProfile__paragraph__debut">
-            <!-- <h4>Debut</h4>  -->
-            <!-- <p>26th May, 2015</p> -->
+            <p>26th May, 2015</p>
         </div>
         <div class="mainProfile__paragraph__members">
-            <!-- <h4>Members</h4>  -->
-            <!-- <p>13 members and 3 sub-units forming one team. </p> -->
-            <p>13 members <br>3 sub-units forming one team. </p>
+            <img class="mainProfile__paragraph__members__image"  src="images/attacca_group_photo_3.jpg" alt="">
+            <p class="mainProfile__paragraph__members__names"></p>
         </div>
         <div class="mainProfile__paragraph__list">
             <h4>Sub-units</h4> 
@@ -64,14 +61,12 @@
             
             <div class="mainProfile__paragraph__units__unit">
                 <div class="mainProfile__paragraph__units__unit__hhu">
-                    <!-- <h4>Hip-hop Unit</h4>  -->
                     <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">S.coups</p>
                     <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">Wonwoo</p>
                     <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">Mingyu</p>
                     <p style="font-size: 1.2em;color: white;">Vernon</p>
                 </div>
                 <div class="mainProfile__paragraph__units__unit__vu">
-                    <!-- <h4>Vocal Unit</h4>  -->
                     <p style="margin-bottom: .6em;font-size: 1.2em;color: black;">Woozi</p>
                     <p style="margin-bottom: .6em;font-size: 1.2em;color: black;">Jeonghan</p>
                     <p style="margin-bottom: .6em;font-size: 1.2em;color: black;">Joshua</p>
@@ -79,7 +74,6 @@
                     <p style="font-size: 1.2em;color: black;">Seungkwan</p>
                 </div>
                 <div class="mainProfile__paragraph__units__unit__pu">
-                    <!-- <h4>Performance Unit</h4>  -->
                     <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">Hoshi</p>
                     <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">Jun</p>
                     <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">THE 8</p>
@@ -98,6 +92,7 @@
             <div class="mainProfile__paragraph__morecontents_div">
                 <p style="margin-bottom: .6em;font-size: 1.2em;">IF</p>
                 <p style="margin-bottom: .6em;font-size: 1.2em;">Snapshoot</p>
+                <p style="margin-bottom: .6em;font-size: 1.2em;">Inside Seventeen</p>
                 <p style="font-size: 1.2em;">Dawn is hotter than day</p>
             </div>
         </div>
@@ -110,7 +105,7 @@
         <div class="bar"></div>
         <div class="icons">
             <a class="icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
-            <a class="icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fab fa-spotify"></i></i></a>
+            <a class="icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank"><i class="fab fa-spotify"></i></i></a>
             <a class="icons__links link" href="https://twitter.com/pledis_17"><i class="fa-brands fa-twitter"></i></a>
             <a class="icons__links link" href="https://www.facebook.com/seventeennews"><i class="fa-brands fa-facebook-f"></i></a>
             <a class="icons__links link" href="https://www.youtube.com/user/pledis17"><i class="fa-brands fa-youtube"></i></a>
@@ -119,11 +114,11 @@
     </footer>
 
     <div class="backgroundText">Profile</div>
-    <!-- <div class="imageDiv">
-        <img class="image" src="images/seventeen_logo.png" alt="">
-    </div> -->
+   
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/app.js"></script>
+    <script src="/javascript/data/profile_members.js"></script>
+    <script src="/javascript/pages/profile.js"></script>
     <script src="https://kit.fontawesome.com/58fb59c662.js" crossorigin="anonymous"></script>
 </body>
 </html>
