added classes to footer

--- a/members_with_scroll.html
+++ b/members_with_scroll.html
@@ -39,25 +39,25 @@
 
     <main class="mainMembers"></main>
 
-    <footer>
-        <div class="pledis">
-            <p>pledis entertainment</p>
+    <footer class="footer">
+        <div class="footer__pledis">
+            <p class="footer__pledis__paragraph">pledis entertainment</p>
         </div>
-        <div class="bar"></div>
-        <div class="icons">
-            <a class="icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
-            <a class="icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank"><i class="fab fa-spotify"></i></i></a>
-            <a class="icons__links link" href="https://twitter.com/pledis_17"><i class="fa-brands fa-twitter"></i></a>
-            <a class="icons__links link" href="https://www.facebook.com/seventeennews"><i class="fa-brands fa-facebook-f"></i></a>
-            <a class="icons__links link" href="https://www.youtube.com/user/pledis17"><i class="fa-brands fa-youtube"></i></a>
-            <a class="icons__links link" href="https://www.instagram.com/saythename_17"><i class="fa-brands fa-instagram"></i></a>
+        <div class="footer__bar"></div>
+        <div class="footer__icons">
+            <a class="footer__icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
+            <a class="footer__icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank"><i class="fab fa-spotify"></i></i></a>
+            <a class="footer__icons__links link" href="https://twitter.com/pledis_17"><i class="fa-brands fa-twitter"></i></a>
+            <a class="footer__icons__links link" href="https://www.facebook.com/seventeennews"><i class="fa-brands fa-facebook-f"></i></a>
+            <a class="footer__icons__links link" href="https://www.youtube.com/user/pledis17"><i class="fa-brands fa-youtube"></i></a>
+            <a class="footer__icons__links link" href="https://www.instagram.com/saythename_17"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
 
     <div class="backgroundText">Members</div>
 
     <script src="/javascript/data/members_data.js"></script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="app.js"></script>
     
     <script>
         const main = document.querySelector('.mainMembers');
@@ -112,6 +112,9 @@
                         <p class="mainMembers__dets__info__birthday"><span class="mainMembers__dets__info__label">Birthday:</span> ${membersData[i].birthday}</p>
                         <p class="mainMembers__dets__info__zodiac"><span class="mainMembers__dets__info__label">Zodiac Sign:</span> ${membersData[i].zodiac_sign}</p>
                     </div>   
+                    <p class="mainMembers__dets__number">
+                        ${membersData[i].id}
+                    </p>
                 `;
                 main.append(dets);
             }
