--- a/profile.html
+++ b/profile.html
@@ -64,23 +64,23 @@
             
             <div class="mainProfile__paragraph__units__unit">
                 <div class="mainProfile__paragraph__units__unit__hhu">
-                    <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">S.coups</p>
-                    <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">Wonwoo</p>
-                    <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">Mingyu</p>
-                    <p style="font-size: 1.2em;color: white;">Vernon</p>
+                    <p class="mainProfile__paragraph__units__unit__hhu__names" style="margin-bottom: .6em;">S.coups</p>
+                    <p class="mainProfile__paragraph__units__unit__hhu__names" style="margin-bottom: .6em;">Wonwoo</p>
+                    <p class="mainProfile__paragraph__units__unit__hhu__names" style="margin-bottom: .6em;">Mingyu</p>
+                    <p class="mainProfile__paragraph__units__unit__hhu__names">Vernon</p>
                 </div>
                 <div class="mainProfile__paragraph__units__unit__vu">
-                    <p style="margin-bottom: .6em;font-size: 1.2em;color: black;">Woozi</p>
-                    <p style="margin-bottom: .6em;font-size: 1.2em;color: black;">Jeonghan</p>
-                    <p style="margin-bottom: .6em;font-size: 1.2em;color: black;">Joshua</p>
-                    <p style="margin-bottom: .6em;font-size: 1.2em;color: black;">DK</p>
-                    <p style="font-size: 1.2em;color: black;">Seungkwan</p>
+                    <p class="mainProfile__paragraph__units__unit__vu__names" style="margin-bottom: .6em;">Woozi</p>
+                    <p class="mainProfile__paragraph__units__unit__vu__names" style="margin-bottom: .6em;">Jeonghan</p>
+                    <p class="mainProfile__paragraph__units__unit__vu__names" style="margin-bottom: .6em;">Joshua</p>
+                    <p class="mainProfile__paragraph__units__unit__vu__names" style="margin-bottom: .6em;">DK</p>
+                    <p class="mainProfile__paragraph__units__unit__vu__names">Seungkwan</p>
                 </div>
                 <div class="mainProfile__paragraph__units__unit__pu">
-                    <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">Hoshi</p>
-                    <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">Jun</p>
-                    <p style="margin-bottom: .6em;font-size: 1.2em;color: white;">THE 8</p>
-                    <p style="font-size: 1.2em;color: white;">Dino</p>
+                    <p class="mainProfile__paragraph__units__unit__pu__names" style="margin-bottom: .6em;">Hoshi</p>
+                    <p class="mainProfile__paragraph__units__unit__pu__names" style="margin-bottom: .6em;">Jun</p>
+                    <p class="mainProfile__paragraph__units__unit__pu__names" style="margin-bottom: .6em;">THE 8</p>
+                    <p class="mainProfile__paragraph__units__unit__pu__names">Dino</p>
                 </div>
             </div>
         </div>
@@ -113,18 +113,18 @@
           
     </main>
 
-    <footer>
-        <div class="pledis">
-            <p>pledis entertainment</p>
+    <footer class="footer">
+        <div class="footer__pledis">
+            <p class="footer__pledis__paragraph">pledis entertainment</p>
         </div>
-        <div class="bar"></div>
-        <div class="icons">
-            <a class="icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
-            <a class="icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank"><i class="fab fa-spotify"></i></i></a>
-            <a class="icons__links link" href="https://twitter.com/pledis_17"><i class="fa-brands fa-twitter"></i></a>
-            <a class="icons__links link" href="https://www.facebook.com/seventeennews"><i class="fa-brands fa-facebook-f"></i></a>
-            <a class="icons__links link" href="https://www.youtube.com/user/pledis17"><i class="fa-brands fa-youtube"></i></a>
-            <a class="icons__links link" href="https://www.instagram.com/saythename_17"><i class="fa-brands fa-instagram"></i></a>
+        <div class="footer__bar"></div>
+        <div class="footer__icons">
+            <a class="footer__icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
+            <a class="footer__icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank"><i class="fab fa-spotify"></i></i></a>
+            <a class="footer__icons__links link" href="https://twitter.com/pledis_17"><i class="fa-brands fa-twitter"></i></a>
+            <a class="footer__icons__links link" href="https://www.facebook.com/seventeennews"><i class="fa-brands fa-facebook-f"></i></a>
+            <a class="footer__icons__links link" href="https://www.youtube.com/user/pledis17"><i class="fa-brands fa-youtube"></i></a>
+            <a class="footer__icons__links link" href="https://www.instagram.com/saythename_17"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
 
