added more elements to seventeen name

--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
             <!-- <p>Seventeen</p> -->
         </div>
         <div class="mainProfile__seventeen__name">
-            <h1>Seventeen</h1>
+            <p>Seventeen&#183Seventeen&#183Seventeen&#183Seventeen&#183Seventeen</h1>
         </div>
         <svg>
             <filter></filter>
