added classes to list

--- a/discography.html
+++ b/discography.html
@@ -26,10 +26,10 @@
             <div class="navbar">
                 <div class="navbar__item">
                     <ul class="navbar__ul">
-                        <li><a class="link" href="main.html">Home</a></li>
-                        <li><a class="link" href="profile.html">Profile</a></li>
-                        <li><a class="link" href="discography.html">Discography</a></li>
-                        <li><a class="link" href="members.html">Members</a></li>
+                        <li class="navbar__ul__li"><a class="link" href="main.html">Home</a></li>
+                        <li class="navbar__ul__li"><a class="link" href="profile.html">Profile</a></li>
+                        <li class="navbar__ul__li"><a class="link" href="discography.html">Discography</a></li>
+                        <li class="navbar__ul__li"><a class="link" href="members.html">Members</a></li>
                     </ul>
                 </div>
                 
