--- a/fake_members.html
+++ b/fake_members.html
@@ -111,9 +111,11 @@
                         <p class="mainMembers__dets__info__subunit">${membersData[i].sub_unit}</p>
                         
                         <p class="mainMembers__dets__info__birth_name"><span class="mainMembers__dets__info__label">Birth Name:</span> ${membersData[i].birth_name}</p>
-                        <p class="mainMembers__dets__info__position"><span class="mainMembers__dets__info__label">Position:</span> ${membersData[i].position}</p>
-                        <p class="mainMembers__dets__info__birthday"><span class="mainMembers__dets__info__label">Birthday:</span> ${membersData[i].birthday}</p>
-                        <p class="mainMembers__dets__info__zodiac"><span class="mainMembers__dets__info__label">Zodiac Sign:</span> ${membersData[i].zodiac_sign}</p>
+                        <p class="mainMembers__dets__info__korean_name" ><span class="mainMembers__dets__info__label">Korean Name:</span> ${membersData[i].korean_name}</p>
+            <p class="mainMembers__dets__info__nationality"><span class="mainMembers__dets__info__label">Nationality:</span> ${membersData[i].nationality}</p>
+            <p class="mainMembers__dets__info__position"><span class="mainMembers__dets__info__label">Position:</span> ${membersData[i].position}</p>
+            <p class="mainMembers__dets__info__birthday"><span class="mainMembers__dets__info__label">Birthday:</span> ${membersData[i].birthday}</p>
+            <p class="mainMembers__dets__info__zodiac"><span class="mainMembers__dets__info__label">Zodiac Sign:</span> ${membersData[i].zodiac_sign}</p>
                     </div>   
                     <p class="mainMembers__dets__number">
                         ${membersData[i].id}
