added debutDate and other info

--- a/profile.html
+++ b/profile.html
@@ -50,7 +50,14 @@
             <filter></filter>
         </svg>
         <div class="mainProfile__paragraph__debut">
+            <!-- <p>26 May, 2015</p> -->
+        </div>
+        <div class="mainProfile__paragraph__debutdate">
             <p>26th May, 2015</p>
+        </div>
+        <div class="mainProfile__paragraph">
+            <p>Fandom Name: Carat
+                Official Fan Colors: Rose Quartz and Serenity</p>
         </div>
         <div class="mainProfile__paragraph__members">
             <img class="mainProfile__paragraph__members__image"  src="images/attacca_group_photo_3.jpg" alt="">
