added info to debutdate

--- a/profile.html
+++ b/profile.html
@@ -61,8 +61,10 @@
             </div>
         </div>
         <div class="mainProfile__paragraph__debutdate">
-            <!-- <p>26th May, 2015</p> -->
-            <p>Seventeen debuted on <span class="mainProfile__paragraph__debutdate__date">26th of May, 2015</span> with their mini-album <span class="mainProfile__paragraph__debutdate__album">17 Carat</span> including title track <span class="mainProfile__paragraph__debutdate__title_track">Adore U</span>.</p>
+            <p class="mainProfile__paragraph__debutdate__date">26th May, 2015</p>
+            <!-- <p>Seventeen debuted on <span class="mainProfile__paragraph__debutdate__date">26th of May, 2015</span> with their mini-album <span class="mainProfile__paragraph__debutdate__album">17 Carat</span> including title track <span class="mainProfile__paragraph__debutdate__title_track">Adore U</span>.</p> -->
+            <!-- <p>Seventeen debuted with their mini-album <span class="mainProfile__paragraph__debutdate__album">17 Carat</span> including title track <span class="mainProfile__paragraph__debutdate__title_track">Adore U</span>.</p> -->
+            <p>Seventeen debuted with their mini-album 17 Carat including title track Adore U.</p>
             <!-- <p>26/05/2015</p> -->
         </div>
         <div class="mainProfile__paragraph__debutImages">
