--- a/profile.html
+++ b/profile.html
@@ -32,6 +32,7 @@
                         <li><a class="link" href="discography.html">Discography</a></li>
                         <li><a class="link" href="members.html">Members</a></li>
                     </ul>
+                    <div class="credits"><a href="credits.html">Credits</a></div>
                 </div>
                 
             </div>
@@ -44,7 +45,8 @@
             <!-- <p>Seventeen</p> -->
         </div>
         <div class="mainProfile__seventeen__name">
-            <p>Seventeen&#183Seventeen&#183Seventeen&#183Seventeen&#183Seventeen</p>
+            <!-- <p>Seventeen&#183Seventeen&#183Seventeen&#183Seventeen&#183Seventeen</p> -->
+            <p><span>Seventeen</span> Seventeen Seventeen Seventeen Seventeen</p>
         </div>
         <div class="mainProfile__paragraph__definition">
             <!-- <p class="backgroundSVTText">13+3+1=17</p> -->
@@ -96,8 +98,8 @@
             
             <div class="mainProfile__paragraph__units__unit">
                 <div class="mainProfile__paragraph__units__unit__hhu">
-                    <p class="mainProfile__paragraph__units__unit__hhu__names" style="margin-bottom: .6em;">S.coups</p>
-                    <p class="mainProfile__paragraph__units__unit__hhu__names" style="margin-bottom: .6em;">Wonwoo</p>
+                    <p class="mainProfile__paragraph__units__unit__hhu__names scoups" style="margin-bottom: .6em;">S.coups</p>
+                    <p class="mainProfile__paragraph__units__unit__hhu__names wonwoo" style="margin-bottom: .6em;">Wonwoo</p>
                     <p class="mainProfile__paragraph__units__unit__hhu__names" style="margin-bottom: .6em;">Mingyu</p>
                     <p class="mainProfile__paragraph__units__unit__hhu__names">Vernon</p>
                 </div>
@@ -164,10 +166,10 @@
     </main>
 
     <footer class="footer">
-        <div class="footer__pledis">
+        <!-- <div class="footer__pledis">
             <p class="footer__pledis__paragraph">pledis entertainment</p>
-        </div>
-        <div class="footer__bar"></div>
+        </div> -->
+        <!-- <div class="footer__bar"></div> -->
         <div class="footer__icons">
             <a class="footer__icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
             <a class="footer__icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank"><i class="fab fa-spotify"></i></i></a>
