--- a/discography.html
+++ b/discography.html
@@ -31,6 +31,7 @@
                         <li class="navbar__ul__li"><a class="link" href="discography.html">Discography</a></li>
                         <li class="navbar__ul__li"><a class="link" href="members.html">Members</a></li>
                     </ul>
+                    <div class="credits"><a href="credits.html">Credits</a></div>
                 </div>
                 
             </div>
@@ -50,10 +51,10 @@
     <a class="watch-link" target="_blank">Watch MV</a>
 
     <footer class="footer">
-        <div class="footer__pledis">
+        <!-- <div class="footer__pledis">
             <p class="footer__pledis__paragraph">pledis entertainment</p>
-        </div>
-        <div class="footer__bar"></div>
+        </div> -->
+        <!-- <div class="footer__bar"></div> -->
         <div class="footer__icons">
             <a class="footer__icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
             <a class="footer__icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank"><i class="fab fa-spotify"></i></i></a>
