added style to credits class

--- a/members_with_scroll.html
+++ b/members_with_scroll.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -124,4 +124,4 @@
     </script>
     <script src="https://kit.fontawesome.com/58fb59c662.js" crossorigin="anonymous"></script>
 </body>
-</html>
+</html> -->
