--- a/credits.html
+++ b/credits.html
@@ -17,10 +17,11 @@
 <!-- <body onload="homePageNews()">  -->
     <!-- background-color: #f7cac9; color: #92a8d1; -->
 
+    <div class="loading">Loading</div>
+
     <!-- HEADER -->
     <header>
         <div id="cursor"></div>
-        <!-- <div id="group"><span class="glitch"><a href="main.html">SVT</a></span></div> -->
         
         <span id="colorMode"></span>
         <div class="menu_btn">
@@ -47,46 +48,37 @@
     </header> 
     <!-- END OF HEADER -->
 
-    <!-- MAINHOME -->
+    <!-- MAINCREDITS -->
     <main class="mainCredits"> 
+        <!-- <div class="mainCredits__fanpage">
+            <p class="mainCredits__fanpage__forSvt">A fanpage for Seventeen</p>
+        </div> -->
         <div class="mainCredits__bio">
-            <h3>Developer</h3>
-            <p>Emmanuella Adeka</p>
+            <p class="mainCredits__bio__iAm">Developer</p>
+            <p class="mainCredits__bio__name">Emmanuella Adeka</p>
         </div>
         <div class="mainCredits__allCredits">
-            <p>All Credits go to Pledis Entertainment and Seventeen</p>
+            <p class="mainCredits__allCredits__fansite">A fansite for Seventeen</p>
+            <p class="mainCredits__allCredits__creditsParagraph"></p>
         </div>
     </main>
-    <!-- END OF MAINHOME -->
+    <!-- END OF MAINCREDITS -->
 
-    <!-- FOOTER -->
-    <!-- <footer class="footer"> -->
-        <!-- <div class="footer__pledis">
-            <p class="footer__pledis__paragraph">pledis entertainment</p>
-        </div> -->
-        <!-- <div class="footer__bar"></div> -->
-        <!-- <div class="footer__icons">
-            <a class="footer__icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank"><i class="fa-solid fa-heart"></i></i></a>
-            <a class="footer__icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank"><i class="fab fa-spotify"></i></i></a>
-            <a class="footer__icons__links link" href="https://twitter.com/pledis_17"><i class="fa-brands fa-twitter"></i></a>
-            <a class="footer__icons__links link" href="https://www.facebook.com/seventeennews"><i class="fa-brands fa-facebook-f"></i></a>
-            <a class="footer__icons__links link" href="https://www.youtube.com/user/pledis17"><i class="fa-brands fa-youtube"></i></a>
-            <a class="footer__icons__links link" href="https://www.instagram.com/saythename_17"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-    </footer> -->
-    <!-- END OF FOOTER -->
 
     <!-- BACKGROUND TEXT -->
-    <div class="backgroundText">Credits </div>
+    <div class="backgroundText">Credits</div>
    
     <!-- JAVASCRIPT RELATED -->
     <script src="https://kit.fontawesome.com/58fb59c662.js" crossorigin="anonymous"></script>
 
     <!-- MAIN JAVASCRIPT FILES -->
     <script type="module" src="/app.js"></script>
-    <script src="/javascript/data/home_data.js"></script>
-    <!-- <script src="/javascript/navbar.js"></script> -->
-    <!-- <script src="/javascript/pages/main.js"></script> -->
+    <script>
+        let date = new Date();
+
+        const creditsPara = document.querySelector(".mainCredits__allCredits__creditsParagraph");
+        creditsPara.innerHTML = `All Credits, Photos, and Videos belong to Seventeen and Pledis Entertainment &copy; `+ date.getFullYear();
+    </script>
     <!-- END OF JAVASCRIPT RELATED -->
 </body>
 </html>
