added phots section

--- a/credits.html
+++ b/credits.html
@@ -57,6 +57,10 @@
             <p class="mainCredits__bio__iAm">Developer</p>
             <p class="mainCredits__bio__name">Emmanuella Adeka</p>
         </div>
+        <div class="mainCredits__photos">
+            <p class="mainCredits__photos__from">Photos from</p>
+            <p class="mainCredits__photos__source">Elle, Cosmopolitan, Arena</p>
+        </div>
         <div class="mainCredits__allCredits">
             <p class="mainCredits__allCredits__fansite">A fansite for Seventeen</p>
             <p class="mainCredits__allCredits__creditsParagraph"></p>
