switched up navbar a bit

--- a/discography.html
+++ b/discography.html
@@ -30,10 +30,30 @@
                     </div>
                    
                     <ul class="navbar__ul">
-                        <li><a class="link" href="main.html">Home</a></li>
-                        <li><a class="link" href="profile.html">Profile</a></li>
-                        <li><a class="link" href="discography.html">Discography</a></li>
-                        <li><a class="link" href="members.html">Members</a></li>
+                        <li>
+                            <span><a class="link homeLink" href="main.html" data-text="Home">Home</a></span>
+                            <span class="home-project-preview-wrapper">
+                                <div class="home-project-preview"></div>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="profile-project-preview-wrapper">
+                                <div class="profile-project-preview"></div>
+                            </span>
+                            <span><a class="link profileLink" href="profile.html" data-text="Profile">Profile</a></span>
+                        </li>
+                        <li>
+                            <span><a class="link discographyLink" href="discography.html" data-text="Discography">Discography</a></span>
+                            <span class="discography-project-preview-wrapper">
+                                <div class="discography-project-preview"></div>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="members-project-preview-wrapper">
+                                <div class="members-project-preview"></div>
+                            </span>
+                            <span><a class="link membersLink" href="members.html" data-text="Members">Members</a></span>
+                        </li>
                     </ul>
                     <div class="credits"><span><a href="credits.html">Credits</a></span><span><a href="socials.html">Socials</a></span></div>
                 </div>
@@ -51,8 +71,8 @@
         <i class="fa-solid fa-arrow-down-long next"></i>
         
     </main> 
-    <a class="listen-link" target="_blank">Listen</a>
-    <a class="watch-link" target="_blank">Watch MV</a>
+    <!-- <a class="listen-link" target="_blank">Listen</a> -->
+    <!-- <a class="watch-link" target="_blank">Watch MV</a> -->
 
     <div class="socialsDiv">
         <p class="socialsDiv__socials">socials</p>
@@ -67,6 +87,7 @@
                 <a class="footerBar__icons__links link" href="https://www.youtube.com/user/pledis17"><i class="fa-brands fa-youtube"></i></a>
                 <a class="footerBar__icons__links link" href="https://www.instagram.com/saythename_17"><i class="fa-brands fa-instagram"></i></a>
             </div>
+            <div class="footerBackgroundText">Socials </div>
         </div>
     </footer>
 
@@ -76,11 +97,14 @@
   
 
     <script type="module" src="/app.js"></script>
+    <script src="/javascript/navbar.js"></script>
     <script src="/javascript/footer.js"></script>
     <script src="/javascript/data/discography_data.js"></script>
     <script src="/javascript/pages/discography.js"></script>
   
     <script src="https://kit.fontawesome.com/58fb59c662.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/CSSRulePlugin.min.js" integrity="sha512-oYnRsy+bFXYr+btXcKk2dpzfERnCUc5G4GkJ0AO/XSvomLV7Xc7tZVhTsYIz9QzOAw9qo/6qoA6JTpzaYuHUGg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </body>
 </html>
