Added fonts section

--- a/credits.html
+++ b/credits.html
@@ -71,9 +71,9 @@
 
     <!-- MAINCREDITS -->
     <main class="mainCredits"> 
-        <!-- <div class="mainCredits__fanpage">
-            <p class="mainCredits__fanpage__forSvt">A fanpage for Seventeen</p>
-        </div> -->
+        <div class="mainCredits__svtNamesDiv">
+            <p class="mainCredits__svtNamesDiv__svtNames"><span>Seventeen </span>   <span>17. </span>    <span>세븐틴</span>     <span>seh·vuhn·teen</span>     <span>/ˌsev(ə)nˈtiːn/</span>     <span>XVII</span></p>
+        </div>
         <div class="mainCredits__bio">
             <p class="mainCredits__bio__iAm">Designed & Developed by</p>
             <p class="mainCredits__bio__name">Emmanuella Adeka</p>
@@ -81,6 +81,10 @@
         <div class="mainCredits__photos">
             <p class="mainCredits__photos__from">Photos from</p>
             <p class="mainCredits__photos__source">Elle, Cosmopolitan, Arena</p>
+        </div>
+        <div class="mainCredits__photos">
+            <p class="mainCredits__photos__from">Fonts used</p>
+            <p class="mainCredits__photos__source">New York, Valery </p>
         </div>
         <div class="mainCredits__allCredits">
             <p class="mainCredits__allCredits__fansite">A fansite for Seventeen</p>
