--- a/members.html
+++ b/members.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mate SC&display=swap" rel="stylesheet"> 
     <title>SEVENTEEN - MEMBERS</title>
 </head>
-<body>
+<body data-barba="wrapper">
     <header>
         <div id="cursor"></div>
         <!-- <div id="group"><span class="glitch"><a href="main.html">SVT</a></span></div> -->
@@ -31,7 +31,7 @@
                    
                     <ul class="navbar__ul">
                         <li>
-                            <span><a class="link homeLink" href="main.html" data-text="Home">Home</a></span>
+                            <span><a class="link homeLink animate-this" href="main.html" data-text="Home">Home</a></span>
                             <span class="home-project-preview-wrapper">
                                 <div class="home-project-preview"></div>
                             </span>
@@ -40,10 +40,10 @@
                             <span class="profile-project-preview-wrapper">
                                 <div class="profile-project-preview"></div>
                             </span>
-                            <span><a class="link profileLink" href="profile.html" data-text="Profile">Profile</a></span>
+                            <span><a class="link profileLink animate-this" href="profile.html" data-text="Profile">Profile</a></span>
                         </li>
                         <li>
-                            <span><a class="link discographyLink" href="discography.html" data-text="Discography">Discography</a></span>
+                            <span><a class="link discographyLink animate-this" href="discography.html" data-text="Discography">Discography</a></span>
                             <span class="discography-project-preview-wrapper">
                                 <div class="discography-project-preview"></div>
                             </span>
@@ -52,7 +52,7 @@
                             <span class="members-project-preview-wrapper">
                                 <div class="members-project-preview"></div>
                             </span>
-                            <span><a class="link membersLink" href="members.html" data-text="Members">Members</a></span>
+                            <span><a class="link membersLink animate-this" href="members.html" data-text="Members">Members</a></span>
                         </li>
                     </ul>
                     <div class="credits"><span><a href="credits.html">Credits</a></span><span><a href="socials.html">Socials</a></span></div>
@@ -62,8 +62,31 @@
         </nav> 
     </header> 
 
-    <main class="mainMembers"></main>
+    <div class="load-container">
+        <div class="loading-screen"></div>
+    </div>
 
+    <main class="mainMembers" data-barba="container" data-barba-namespace="members"></main>
+
+    <div class="theDiv">
+        <div class="close" style="position: absolute;right: 0;">CLOSE</div>
+        <div class="membersCarousel">
+            <p class="membersCarousel__paragraph"> 
+                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/attacca_group_photo_3.jpg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/attacca_group_photo_3.jpg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
+            </p>
+        </div>
+    </div>
+
+    <div class="scroll">Scroll</div>
     <div class="socialsDiv">
         <p class="socialsDiv__socials">socials</p>
     </div>
@@ -88,6 +111,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/CSSRulePlugin.min.js" integrity="sha512-oYnRsy+bFXYr+btXcKk2dpzfERnCUc5G4GkJ0AO/XSvomLV7Xc7tZVhTsYIz9QzOAw9qo/6qoA6JTpzaYuHUGg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://kit.fontawesome.com/58fb59c662.js" crossorigin="anonymous"></script>
+
+    <!-- BARVA.JS -->
+        <!-- unpkg -->
+        <script src="https://unpkg.com/@barba/core"></script>
+
+        <!-- jsdelivr -->
+        <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
+    <!-- END OF BARBA.JS -->
 
     <script src="/javascript/data/members_data.js"></script>
     <script type="module" src="app.js"></script>
