--- a/members.html
+++ b/members.html
@@ -15,9 +15,7 @@
 <body data-barba="wrapper">
     <header>
         <div id="cursor"></div>
-        <!-- <div id="group"><span class="glitch"><a href="main.html">SVT</a></span></div> -->
-        
-        <!-- <span id="colorMode"></span> -->
+
         <div class="menu_btn">
             <span class="menu_btn__burger"></span>
         </div>
@@ -69,21 +67,19 @@
     <main class="mainMembers" data-barba="container" data-barba-namespace="members"></main>
 
     <div class="theDiv">
-        <div class="close" style="position: absolute;right: 0;">CLOSE</div>
+        <div class="close"></div>
         <div class="membersCarousel">
             <p class="membersCarousel__paragraph"> 
-                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/attacca_group_photo_3.jpg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/attacca_group_photo_3.jpg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/members/scoups_attacca_op1.jpg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/members/jun_attacca_op1.jpg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/members/mingyu_attacca_op1.jpg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/members/jeonghan_attacca_op1.jpg" alt="">
+                <img class="membersCarousel__paragraph__image"  src="images/members/dk_attacca_op1.jpg" alt="">
             </p>
+            <!-- <p class="member_name">S.coups</p> -->
+            <p class="member_name">es &#183 coups</p>
         </div>
+        
     </div>
 
     <div class="scroll">Scroll</div>
