rearranged elements in intro div

--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
                                 <div class="profile-project-preview"></div>
                             </span>
                             <span><a class="link profileLink animate-this" href="profile.html" data-text="Profile">Profile</a></span>
-                        </li>
+                        </li> 
                         <li>
                             <span><a class="link discographyLink animate-this" href="discography.html" data-text="Discography">Discography</a></span>
                             <span class="discography-project-preview-wrapper">
@@ -73,14 +73,17 @@
     <main class="mainHome"  data-barba="wrapper"> 
         <div class="mainHome__paragraph" data-barba="container" data-barba-namespace="home">
          <div class="mainHome__paragraph__image"></div>
-         <h1>Seventeen</h1>
-         <!-- <h1>17.</h1> -->
-         <!-- <h1>세븐틴</h1> -->
-         <!-- <h1>seh · vuhn · teen</h1> -->
-         <!-- <h1>seh·vuhn·teen</h1> -->
-         <!-- <h1>Say The Name.</h1> -->
-         <!-- <h1> /ˌsev(ə)nˈtiːn/</h1> -->
-         <!-- <h1>XVII</h1> -->
+         <div class="mainHome__paragraph__intro">
+            <p>Say The Name.</p>
+            <h1>Seventeen</h1>
+            <!-- <h1>17.</h1> -->
+            <!-- <h1>세븐틴</h1> -->
+            <!-- <h1>seh · vuhn · teen</h1> -->
+            <!-- <h1>seh·vuhn·teen</h1> -->
+            <!-- <h1> /ˌsev(ə)nˈtiːn/</h1> -->
+            <!-- <h1>XVII</h1> -->
+         </div>
+         
         </div>
     </main>
     <!-- END OF MAINHOME -->
